--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "xlsx-template",
-  "version": "0.5.0",
-  "description": "Generate .xlsx (Excel) files from templates built in Excel",
-  "main": "./lib/index",
+ 
   "author": {
     "name": "Martin Aspeli"
   },
+  "bugs": {
+    "url": "http://github.com/optilude/xlsx-template-matriz/issues"
+  },
+  "bundleDependencies": false,
   "contributors": [
     {
       "name": "Martin Aspeli",
@@ -14,14 +15,23 @@
     {
       "name": "Andrey Kurdyumov",
       "email": "kant2002@gmail.com"
+    },
+    {
+      "name": "Edwin Ospina",
+      "email": "edwinandeka@gmail.com"
     }
   ],
-  "repository": {
-    "type": "git",
-    "url": "http://github.com/optilude/xlsx-template.git"
+  "dependencies": {
+    "elementtree": "^0.1.6",
+    "grunt-cli": "^1.3.2",
+    "jszip": "^2.6.1"
   },
-  "bugs": {
-    "url": "http://github.com/optilude/xlsx-template/issues"
+  "deprecated": false,
+  "description": "Generate .xlsx (Excel) files from templates built in Excel",
+  "devDependencies": {
+    "buster": "^0.7.18",
+    "grunt": "^1.0.3",
+    "grunt-buster": "^0.4.2"
   },
   "licenses": [
     {
@@ -29,18 +39,10 @@
       "url": "http://github.com/optilude/xlsx-template/raw/master/LICENSE"
     }
   ],
-  "dependencies": {
-    "elementtree": "0.1.6",
-    "jszip": "^2.6.1"
-  },
-  "devDependencies": {
-    "buster": "0.7.18",
-    "grunt": "~1.0.1",
-    "grunt-buster": "~0.4.2"
-  },
+  "main": "./lib/index",
+  "name": "xlsx-template-matriz",
   "scripts": {
     "test": "buster-test"
   },
-  "readme": "",
-  "readmeFilename": "README.md"
+  "version": "0.5.0"
 }
